--- a/Tic-Tac-Toe/index.html
+++ b/Tic-Tac-Toe/index.html
@@ -49,6 +49,7 @@
 
     <div class="row">
         <div class="btnOption">
+            <button class="btn btn-success" id="playAgain">Play Again</button>
             <button class="btn btn-success" id="resetScores">Reset Scores</button>
             <button class="btn btn-success" id="resetBoard">Reset Board</button>
         </div>
